--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,5 +1,5 @@
 name: HigherExplosives
 author: toadmess
-description: Controls size and yield of explosions
+description: Per world control over size and yield of explosions
 version: 1.3
 main: toadmess.explosives.HEMain
