--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,5 +1,5 @@
 name: HigherExplosives
 author: toadmess
-description: Per world control over size, yield and player/creature/terrain/item damage of explosions
+description: Per world control over size, yield and player/creature/terrain/item damage of explosions and TNT fuse durations.
 version: 1.6
 main: toadmess.explosives.HEMain
